--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ img{
         <input type="hidden" name="access_key" value="bda048fc-71a5-4d57-a377-f7e56f86e860">
         <input type="hidden" name="redirect" value="https://reponse-done.netlify.app/">
 <div class="card">
-    <img src="Group 3.svg" alt="Profile Picture">
+    <img src="Group 3 (2).svg" alt="Profile Picture">
             <div class="username">
                 <span>@Spider_development</span>
             </div>
